Welcome page now has details of the project.  Forgot Password has styled error messaging.  Fix for dashboard link on the profiles page.  Fixed initial dummy users phone numbers so didn't break the profile page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+a {
+	text-decoration: none !important;
+}
+
 .alert {
 	margin-top:10px;
 	margin-bottom:10px;
@@ -8,6 +12,10 @@
 }
 
 .brand img {
+	max-height:45px;
+}
+
+img.hugmehugyou {
 	max-height:45px;
 }
 
@@ -23,15 +31,10 @@
 	padding-top:5px;
 }
 
-.navbar-fixed-bottom img {
-	max-height:45px;
+.navbar-fixed-bottom p {
+	font-size:70%;
 }
 
-.navbar-fixed-bottom p {
-	font-size:80%;
-	font-style:italic;
-}
-	
 @media (max-width: 979px) {
 	.navbar-fixed-bottom {
 		position: fixed;
